tests/diagnostics/functions/declarations/duplicate_name/expect.txt
# exit: 1
input/main.lang0:5:10: error: duplicate function 'foo'
  function foo() -> int64 {
           ^
